fix: fix appointment scrollbar

--- a/src/pages/Appointments/appointments.css
+++ b/src/pages/Appointments/appointments.css
@@ -1,12 +1,38 @@
+.appointment-list {
+  max-height: 60vh; /* ou a altura que você quiser */
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  padding-right: 10px;
+  scrollbar-gutter: stable;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-block: 8px;
+  margin-top: 4px;
+}
+
 .appointment-card {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  align-items: flex-end;
+
   background-color: #f5f5f5;
   border-radius: 10px;
   padding: 16px;
-  margin-top: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
+.appointment-info {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .cancel-button {
+  max-height: 40px;
   background-color: #ef4444;
   color: white;
   padding: 10px 16px;
@@ -15,7 +41,7 @@
   cursor: pointer;
   font-weight: bold;
   transition: all 0.3s ease-in-out;
-  margin-right: 8px;
+  margin-top: 8px;
 }
 
 .cancel-button:hover {
