--- a/src/pages/Pets/pets.css
+++ b/src/pages/Pets/pets.css
@@ -98,7 +98,6 @@
   cursor: pointer;
   font-weight: bold;
   transition: background-color 0.3s;
-  width: 100%;
 }
 
 .side:hover {
